Bug 146622 'PrefEnumCallback does not work as expected', Author=Roland.Mainz@informatik.med.uni-giessen.de,r=bstell+katakai,sr=jag+scc